# mission-control-demo

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  main.py  mission_control_agent.py  mission_control_server.py  pyproject.toml
mission_control/: __init__.py  config.py
mission_control/prompts/: __init__.py
mission_control/resources/: __init__.py  data.py
mission_control/tools/: __init__.py  web.py
